--- a/css/business-casual.css
+++ b/css/business-casual.css
@@ -1,7 +1,8 @@
 
 body {
     font-family: "Open Sans","Helvetica Neue",Helvetica,Arial,sans-serif;
-    background-image: url("../img/headbg.jpg");
+	background-image: url("../img/menu.jpg");
+    /* background-image: url("../img/headbg.jpg");*/
 	background-position:  center ;
     -webkit-background-size: cover;
     -moz-background-size: cover;
