--- a/img/css/business-casual.css
+++ b/img/css/business-casual.css
@@ -1,7 +1,8 @@
 
 body {
     font-family: "Open Sans","Helvetica Neue",Helvetica,Arial,sans-serif;
-	background-image: url("../img/headbg.jpg");
+	background-color: #1a1a1a;
+  background-image: url("../img/bac.jpg");
     /* background-image: url("../img/headbg.jpg");*/
 	background-position:  center ;
     -webkit-background-size: cover;
@@ -92,7 +93,7 @@ hr {
     padding: 30px 15px;
     background: #0c0b0a;
 	opacity: 0.9;
-   
+
 
 
 }
@@ -137,7 +138,7 @@ footer p {
         line-height: normal;
         color: #fff;
 		text-transform: uppercase;
-		
+
 		background: url('../img/headbg.jpg') no-repeat center center fixed;
 		background-color: black; 40%;
     -webkit-background-size: cover;
@@ -227,8 +228,8 @@ div.bhoechie-tab-container{
   -moz-border-radius: 4px;
   border:1px solid #ddd;
   margin-top: 20px;
-  
- 
+
+
   background-clip: padding-box;
   opacity: 0.97;
   filter: alpha(opacity=97);
@@ -277,7 +278,7 @@ div.bhoechie-tab-menu div.list-group>a.active:after{
 }
 
 div.bhoechie-tab-content{
- 
+
   /* border: 1px solid #eeeeee; */
   padding-left: 20px;
   padding-top: 10px;
